--- a/example/src/index.html
+++ b/example/src/index.html
@@ -67,7 +67,7 @@
         </div>
     </form>
     <div>
-        <h2>Output</h2>
+        <h2>OutputMJJJ</h2>
         <div id="output">
             ...
         </div>
