--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <script src="https://sheets2.netlify.com/dist/GetSheetDone.js"></script>
+    <script src="/GetSheetDone.js?0.1.4"></script>
     <script>
         const $key = document.getElementById('key'),
             $sheetNum = document.getElementById('sheetNum'),
