--- a/index.html
+++ b/index.html
@@ -1,55 +1,17 @@
 <!doctype html>
 <html>
-<head>
-    <title>get-sheet-done demo</title>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-        #theForm {
-            border: 1px solid silver;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-        #theForm > div {
-            margin-bottom: 10px;
-        }
-        .label {
-            display: inline-block;
-            width: 150px;
-        }
-        #key {
-            width: 400px;
-            max-width: 100%;
-        }
-        #output {
-            overflow: auto;
-        }
-        .checkboxGroup {
-            display: inline-block;
-            vertical-align: top;
-        }
-    </style>
-</head>
-<body>
-    <h1>Get Sheet Done demo</h1>
-    <p>
-        <a href="https://github.com/giladaya/get-sheet-done">Repo</a>
-    </p>
 
     <form id="theForm">
-        <div>
+        <!---<div>
             <label title="Google sheet ID from URL">
                 <span class="label">Document key:</span>
-                <input id="key" value="1Dc3TPyR1rYoYurEdGGf8gZBO2eYtXaD8qmIRlDMdAMY"/>
+                <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
             </label>
         </div>
         <div>
             <label title="Sheet number (first is 1)">
                 <span class="label">Sheet # (1 based):</span>
-                <input id="sheetNum" type="number" value="1"/>
+                <input id="sheetNum" type="number" value="3"/>
             </label>
         </div>
         <div>
@@ -61,7 +23,7 @@
                     <input type="radio" name="type" value="raw"> Raw arrays
                 </div>
             </label>
-        </div>
+        </div>--->
         <div>
             <button type="submit">Go</button>
         </div>
@@ -75,8 +37,8 @@
 
     <script src="/GetSheetDone.js?0.1.4"></script>
     <script>
-        const $key = document.getElementById('key'),
-            $sheetNum = document.getElementById('sheetNum'),
+        const $key = document.getElementById('1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU'),
+            $sheetNum = document.getElementById('3'),
             $form = document.getElementById('theForm'),
             $output = document.getElementById('output');
         let key,
