--- a/example/src/index.html
+++ b/example/src/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Get Sheet Done demo</h1>
+    <h1>Get Sheet Done dejjjjmo</h1>
     <p>
         <a href="https://github.com/giladaya/get-sheet-done">Repo</a>
     </p>
