--- a/example/src/index.html
+++ b/example/src/index.html
@@ -36,7 +36,7 @@
 <body>
     <h1>Get Sheet Done dejjjjmo</h1>
     <p>
-        <a href="https://github.com/giladaya/get-sheet-done">Repo</a>
+        <a href="https://github.com/giladaya/get-sheet-done">ReDpo</a>
     </p>
 
     <form id="theForm">
@@ -67,7 +67,7 @@
         </div>
     </form>
     <div>
-        <h2>OutputMJJJ</h2>
+        <h2>OutputMJJJ2</h2>
         <div id="output">
             ...
         </div>
