--- a/index.html
+++ b/index.html
@@ -1,20 +1,83 @@
+
 <!doctype html>
 <html>
+<head>
+    <title>get-sheet-done demo</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+        body {
+            font-family: sans-serif;
+        }
+        #theForm {
+            border: 1px solid silver;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        #theForm > div {
+            margin-bottom: 10px;
+        }
+        .label {
+            display: inline-block;
+            width: 150px;
+        }
+        #key {
+            width: 400px;
+            max-width: 100%;
+        }
+        #output {
+            overflow: auto;
+        }
+        .checkboxGroup {
+            display: inline-block;
+            vertical-align: top;
+        }
+    </style>
+</head>
+<body>
+    <h1>Get Sheet Done demo</h1>
+    <p>
+        <a href="https://github.com/giladaya/get-sheet-done">Repo</a>
+    </p>
 
-
+    <form id="theForm">
+        <div>
+            <label title="Google sheet ID from URL">
+                <span class="label">Document key:</span>
+                <input id="key" value="1Dc3TPyR1rYoYurEdGGf8gZBO2eYtXaD8qmIRlDMdAMY"/>
+            </label>
+        </div>
+        <div>
+            <label title="Sheet number (first is 1)">
+                <span class="label">Sheet # (1 based):</span>
+                <input id="sheetNum" type="number" value="1"/>
+            </label>
+        </div>
+        <div>
+            <label title="Whether first column should be used for row titles">
+                <span class="label">Data labels: </span>
+                <div>
+                    <input type="radio" name="type" value="cols" checked> Cols labels<br>
+                    <input type="radio" name="type" value="cols-rows"> Cols + Rows labels<br>
+                    <input type="radio" name="type" value="raw"> Raw arrays
+                </div>
+            </label>
+        </div>
         <div>
             <button type="submit">Go</button>
         </div>
-
-  <div id="output">
+    </form>
+    <div>
+        <h2>OutputMJJJ</h2>
+        <div id="output">
             ...
         </div>
     </div>
 
-    <script src="/GetSheetDone.js?0.1.4"></script>
+    <script src="https://sheets2.netlify.com/dist/GetSheetDone.js"></script>
     <script>
-        const $key = document.getElementById('1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU'),
-            $sheetNum = document.getElementById('3'),
+        const $key = document.getElementById('key'),
+            $sheetNum = document.getElementById('sheetNum'),
             $form = document.getElementById('theForm'),
             $output = document.getElementById('output');
         let key,
@@ -31,7 +94,7 @@
         function readValues() {
             key = $key.value;
             sheetNum =$sheetNum.value;
-            sheetType = document.querySelector('raw').value;
+            sheetType = document.querySelector('input[name="type"]:checked').value;
         }
         function attachEvents() {
             $form.onsubmit = function(ev) {
@@ -39,16 +102,16 @@
                 readValues();
                 console.log(key, sheetNum, sheetType);
                 let promise;
-                switch ('raw') {
+                switch (sheetType) {
                     case 'cols':
-                        promise = GetSheetDone.labeledCols('1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU', '3');
+                        promise = GetSheetDone.labeledCols(key, sheetNum);
                         break;
                     case 'cols-rows':
-                        promise = GetSheetDone.labeledColsRows('1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU', '3');
+                        promise = GetSheetDone.labeledColsRows(key, sheetNum);
                         break;
                     case 'raw':
                     default:
-                        promise = GetSheetDone.raw('1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU', '3');
+                        promise = GetSheetDone.raw(key, sheetNum);
                         break;
                 }
                 promise.then((data) => {
