--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <h1>Get Sheet Done demo</h1>
     <p>
-        <a href="https://github.com/giladaya/get-sheet-done">Repo</a>
+        <a href="https://github.com/giladaya/get-sheet-done">RepoOOOOOO</a>
     </p>
 
     <form id="theForm">
