--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!doctype html>
 <html>
 <head>
-    <title>get-sheet-done demo</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style>
@@ -35,31 +34,27 @@
     </style>
 </head>
 <body>
-    <h1>Get Sheet Done demo</h1>
-    <p>
-        <a href="https://github.com/giladaya/get-sheet-done">RepoOOOOOO</a>
-    </p>
+
+  
 
     <form id="theForm">
         <div>
             <label title="Google sheet ID from URL">
                 <span class="label">Document key:</span>
-                <input id="key" value="1Dc3TPyR1rYoYurEdGGf8gZBO2eYtXaD8qmIRlDMdAMY"/>
+                <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
             </label>
         </div>
         <div>
             <label title="Sheet number (first is 1)">
                 <span class="label">Sheet # (1 based):</span>
-                <input id="sheetNum" type="number" value="1"/>
+                <input id="sheetNum" type="number" value="3"/>
             </label>
         </div>
         <div>
             <label title="Whether first column should be used for row titles">
                 <span class="label">Data labels: </span>
                 <div>
-                    <input type="radio" name="type" value="cols" checked> Cols labels<br>
-                    <input type="radio" name="type" value="cols-rows"> Cols + Rows labels<br>
-                    <input type="radio" name="type" value="raw"> Raw arrays
+                    <input type="radio" name="type" value="raw" checked> Raw arrays
                 </div>
             </label>
         </div>
@@ -68,7 +63,6 @@
         </div>
     </form>
     <div>
-        <h2>OutputMJJJ</h2>
         <div id="output">
             ...
         </div>
