--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   
 
     <form id="theForm">
+      <div style="">
           <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
                 <input id="sheetNum" type="number" value="3"/>
-                    <input type="radio" name="type" value="raw" checked> Raw arrays
+                    <input type="radio" name="type" value="raw" checked/>
             <button type="submit">Go</button>
     </form>
     <div>
