--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   
 
     <form id="theForm">
-      <div style="">
+      <div style="display: none;">
           <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
                 <input id="sheetNum" type="number" value="3"/>
                     <input type="radio" name="type" value="raw" checked/>
+      </div>
             <button type="submit">Go</button>
     </form>
     <div>
