--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 promise.then((data) => {
                     console.log('Data');
                     console.log(data);
-                    $output.innerHTML = JSON.stringify(data).split(",");
+                    $output.innerHTML = JSON.stringify(data).split("Meaning");
                 }).catch(err => {
                     console.log('Error');
                     console.log(err);
@@ -79,7 +79,7 @@
         }
   
       var html = "<table border='1|1'>";
-for (var i = 0; i < $output.length; i++) {
+for (var i = 0; i < output.length; i++) {
     html+="<tr>";
     html+="<td>"+rows[i].role+"</td>";
     html+="<td>"+rows[i].name+"</td>";
