--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 promise.then((data) => {
                     console.log('Data');
                     console.log(data);
-                    $output.innerHTML = JSON.stringify(data).concat().split(",");
+                    $output.innerHTML = JSON.stringify(data).concat().split("accordance");
                 }).catch(err => {
                     console.log('Error');
                     console.log(err);
