--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 promise.then((data) => {
                     console.log('Data');
                     console.log(data);
-                    $output.innerHTML = JSON.stringify(data).concat().split("accordance");
+                    $output.innerHTML = JSON.stringify(data).join();
                 }).catch(err => {
                     console.log('Error');
                     console.log(err);
@@ -77,18 +77,7 @@
                 })
             }
         }
-  
-      var html = "<table border='1|1'>";
-for (var i = 0; i < output.length; i++) {
-    html+="<tr>";
-    html+="<td>"+rows[i].role+"</td>";
-    html+="<td>"+rows[i].name+"</td>";
 
-    html+="</tr>";
-
-}
-html+="</table>";
-document.getElementById("box").innerHTML = html;
   
   
   </script>
