--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 promise.then((data) => {
                     console.log('Data');
                     console.log(data);
-                    $output.innerHTML = JSON.stringify(data).concat(JSON.stringify(data)[0][1], JSON.stringify(data)[0][2], JSON.stringify(data)[0][3])
+                    $output.innerHTML = JSON.stringify(data)[0][0].concat(JSON.stringify(data)[0][1], JSON.stringify(data)[0][2], JSON.stringify(data)[0][3])
                 }).catch(err => {
                     console.log('Error');
                     console.log(err);
