--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     </form>
     <div>
         <div id="output">
-            ...
+            Click to update role takers.
         </div>
-      <div id="box">
-      </div>
+
     </div>
 
     <script src="https://sheets2.netlify.com/dist/GetSheetDone.js"></script>
