--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </form>
     <div>
         <div id="output">
-            Click to update role takers.
+          output
         </div>
       
       
