--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         const $key = document.getElementById('key'),
             $sheetNum = document.getElementById('sheetNum'),
             $form = document.getElementById('theForm'),
-            $output = document.getElementById('output'),
+            $output = document.getElementById('output');
               
 
       
