--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ $TableTopicsEvaluator= document.getElementById('TableTopicsEvaluator');
                     console.log('Data');
                     console.log(data);
   
-                var str = JSON.stringify(data).replace("""", "").replace("]", "").replace("[", "").replace(",", "").replace(":", "");
+                var str = JSON.stringify(data).replace('"', "").replace("]", "").replace("[", "").replace(",", "").replace(":", "");
 
                 $output.innerHTML = str;
                 
