--- a/index.html
+++ b/index.html
@@ -187,9 +187,10 @@ $TableTopicsEvaluator= document.getElementById('TableTopicsEvaluator');
   
                 var str = JSON.stringify(data).replace('"', "").replace("]", "").replace("[", "").replace(",", "").replace(":", "");
 
-                $output.innerHTML = str;
+              //  $output.innerHTML = str;
                 
-                
+    $output.innerHTML = JSON.stringify(data[5][1]);
+
 var indexofDate = str.indexOf('Date');
 var indexofTheme = str.indexOf('Theme');
 var indexofWordoftheday = str.indexOf('Word of the day');
