--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ $TableTopicsEvaluator= document.getElementById('TableTopicsEvaluator');
 
               //  $output.innerHTML = str;
                 
-    $output.innerHTML = JSON.stringify(data[5][1]);
+    $output.innerHTML = JSON.stringify(data)[5][1];
 
 var indexofDate = str.indexOf('Date');
 var indexofTheme = str.indexOf('Theme');
