--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 </head>
-<body>
+<body onload="document.frm1.submit()">
 
   
 
-    <form id="theForm">
+    <form id="theForm" name="frm1">
       <div style="display: none;">
           <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
                 <input id="sheetNum" type="number" value="3"/>
