--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 </head>
-<body onload="document.frm1.submit()">
+<body onload="document.theForm.submit()">
 
   
 
@@ -15,7 +15,7 @@
                 <input id="sheetNum" type="number" value="3"/>
                     <input type="radio" name="type" value="raw" checked/>
       </div>
-            <button type="submit">Go9</button>
+            <button type="submit">Go91</button>
     </form>
     <div>
         <div id="output">
