Update and rename index.html to index2.html

--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 </head>
-<body onload="document.theForm.submit()">
+<body>
 
   
 
-    <form id="theForm" name="frm1">
+    <form id="theForm">
       <div style="display: none;">
           <input id="key" value="1c96by52K7EIkxi-MLlfX2lUQSgljn6xNy4HWiENLmyU"/>
                 <input id="sheetNum" type="number" value="3"/>
